# Genetic-Algorithm-IO

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  genetic.cpp  island.cpp  island.h  mpi_islands.cpp  optim_functions.cpp  optim_functions.h  run.sh  sa.cu  script.sh  template.sh  test.py
logs/: show.py
src/: Island.cpp  Island.h  Makefile  Problem.cpp  Problem.h  ProblemFactory.cpp  ProblemFactory.h  ProblemName.h  main.cpp  optim_functions.cpp  optim_functions.h  utils.cpp  utils.h
topologies/: 100  1080  120  1200  200  240  300  360  400  480  50  600  720  840  960  topology.py
